# CppCon_BacktoBasics_practice

./: .clang-tidy  .gitignore  README.md
CppCon2019/Object_Oriented_Programming_JonKalb/: a.out  logging_example.cpp  nvi_problem.cpp  nviidiom_example.cpp  nviidom_example2.cpp  slicingexample.cpp
CppCon2019/VirtualDispatch_by_inba_Levi/: crtp  crtp.cpp  notes.txt  subclassing.cpp  visitor_variant.cpp  warmup_example.cpp
debug_with_valgrind/: linked_list.c
learncpp_tutorials/: a.out  all_about_const.cpp  clang_format.cpp  default_constructor.cpp  lifetime_scope.cpp  namespace.cpp  outputoperator.cpp  prject_source_dir.cpp  templates.cpp  type_eraser.cpp  unintialization.cpp  virtual_descructor.cpp  visitor_pattern.cpp
learncpp_tutorials/chapter_10_typeconversion/: notes.txt
learncpp_tutorials/chapter_11_function_temp_func_overload/: examplecode.cpp  notes.txt
learncpp_tutorials/chapter_12_references_pointers/: examplecode.cpp  notes.txt
learncpp_tutorials/chapter_13_Enums_Structs/: examplecode.cpp  notes.txt
learncpp_tutorials/chapter_14_classes/: examplecode  examplecode.cpp  notes.txt
learncpp_tutorials/chapter_15_more_on_classes/: examplecode.cpp  notes.txt
learncpp_tutorials/chapter_20_Functions/: examplecode.cpp  notes.txt  notex.txt
learncpp_tutorials/chapter_22_move_semantics/: examplecode.cpp  notes.txt
learncpp_tutorials/chapter_23_object_realtionships/: examplecode.cpp  notes.txt
learncpp_tutorials/chapter_27_Exceptions/: notes.txt  (+2 more)
learncpp_tutorials/google_unit_test_Example/: Animal.cpp  Animal.hpp  Animaltest.cpp  CMakeLists.txt
(+77 files in other folders)
